<resources>
    <string name="app_name">My Week dash</string>
    <string name="Sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="wednesday">Wednesday</string>
    <string name="back">Back</string>
    <string name="text">type in your schedule…</string>
    <string name="add">ADD</string>
    <string name="home">HOME</string>
    <string name="set">SET</string>
    <string name="blank" />
    <string name="reset">Reset</string>
    <string name="empty">Empty…</string>
</resources>